Fix: Overflow problem fixed

--- a/styles/style1.css
+++ b/styles/style1.css
@@ -124,8 +124,12 @@ body{
     flex-direction: column;
     align-items: center;
 }
+.social-links .links{ /* 2 in a row*/
+    display: flex;
+}
 .social-links button {
-    width: 420px;
+    margin:10px;  /*Margin added so that do not overlap.*/
+    width: 150px;
     height: 35px;
     border: 1px solid #ccc; 
     padding: 5px 10px; 
